01-Springboot-undertow-jar/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-java-undertow
  labels:
    app: hello-java-undertow
    app.kubernetes.io/component: hello-java-undertow
    app.kubernetes.io/instance: hello-java-undertow
    app.kubernetes.io/name: hello-java-undertow
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/hash-as673/spring-demo-maven-jboss-jdk17.git'
spec:
  host: hello-java-undertow.apps.mc3.vpslab.com
  to:
    kind: Service
    name: hello-java-undertow
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
